# umap

./: .pre-commit-config.yaml  ADDITIONAL_CAPABILITIES_ANALYSIS.md  CONTRIBUTING.md  DR_EVALUATION_METRICS_COMPREHENSIVE.md  HNSW_ARCHITECTURE_DIAGRAM.txt  HNSW_ARCHITECTURE_SUMMARY.md  HNSW_EXPLORATION_INDEX.md  HNSW_QUICK_REFERENCE.md  MULTI_VIEW_CROSSFILTER_VISUALIZATION.md  PHASE_1_VALIDATION_SUMMARY.md  PREK.md  README.md  README.rst  REGL_SCATTERPLOT_INTEGRATION.md  UMAP_RESEARCH_PLATFORM_ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
doc/: aligned_umap_basic_usage.rst  development_roadmap.rst  faq.rst  index.rst  outliers.rst  precomputed_k-nn.rst
docs/: HYBRID_TECHNIQUES_API.md  RESEARCH_PLATFORM_ARCHITECTURE.md  SPARSE_VECTORS_CAPABILITY.md  aligned_umap_basic_usage.md  aligned_umap_politics_demo.md  api.md  basic_usage.md  benchmarking.md  clustering.md  composing_models.md  densmap_demo.md  development_roadmap.md  document_embedding.md  embedding_space.md  exploratory_analysis.md  faq.md  how_umap_works.md  index.md  interactive_viz.md  inverse_transform.md  mutual_nn_umap.md  nomic_atlas_umap_of_text_embeddings.md  nomic_atlas_visualizing_mnist_training_dynamics.md  outliers.md  parameters.md  parametric_umap.md  performance.md  plotting.md  precomputed_k-nn.md  release_notes.md  reproducibility.md  research.md  scientific_papers.md  sparse.md  supervised.md  transform.md  transform_landmarked_pumap.md
site/: 404.html  index.html  sitemap.xml
site/aligned_umap_basic_usage/: index.html
site/aligned_umap_politics_demo/: index.html
site/api/: index.html
site/basic_usage/: index.html
site/benchmarking/: index.html
site/clustering/: index.html
site/composing_models/: index.html
site/densmap_demo/: index.html
site/development_roadmap/: index.html
site/document_embedding/: index.html
site/embedding_space/: index.html
site/exploratory_analysis/: index.html
site/faq/: index.html
site/how_umap_works/: index.html
site/interactive_viz/: index.html
site/inverse_transform/: index.html
site/mutual_nn_umap/: index.html
site/nomic_atlas_umap_of_text_embeddings/: index.html
site/nomic_atlas_visualizing_mnist_training_dynamics/: index.html
site/outliers/: index.html
site/parameters/: index.html
site/parametric_umap/: index.html
site/performance/: index.html
site/plotting/: index.html
site/precomputed_k-nn/: index.html
site/release_notes/: index.html
site/reproducibility/: index.html
site/scientific_papers/: index.html
site/search/: search_index.json
site/sparse/: index.html
site/supervised/: index.html
site/transform/: index.html
site/transform_landmarked_pumap/: index.html
umap/: __init__.py  aligned_umap.py  composition.py  metrics.py  spectral.py  utils.py
umap/tests/: test_composition.py  test_metrics.py
