[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umap-learn"
version = "0.5.9.post2"
description = "Uniform Manifold Approximation and Projection"
readme = "README.rst"
license = {text = "BSD"}
keywords = ["dimension reduction", "umap", "t-sne", "manifold"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy > 2",
    "scipy >= 1.3.1",
    "scikit-learn >= 1.6",
    "numba >= 0.51.2",
    "pynndescent >= 0.5",
    "tqdm",
]

[[project.maintainers]]
name = "Leland McInnes"
email = "leland.mcinnes@gmail.com"

[project.urls]
Homepage = "http://github.com/lmcinnes/umap"
Repository = "http://github.com/lmcinnes/umap"

[project.optional-dependencies]
plot = [
    "pandas",
    "matplotlib",
    "datashader",
    "bokeh",
    "holoviews",
    "colorcet",
    "seaborn",
    "scikit-image",
    "dask",
]
parametric_umap = ["tensorflow >= 2.1"]
tbb = ["tbb >= 2019.0"]
test = ["pytest", "pytest-testmon", "pytest-watch"]

[tool.setuptools]
packages = ["umap"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstring conventions - too strict for scientific code
    "D100",  # Missing module docstring
    "D104",  # Missing package docstring
    "D105",  # Missing docstring in magic method
    # Line length - handled by formatter
    "E501",  # Line too long
    # Type checking - handled by mypy
    "ANN",   # Type annotations (handled by type checker)
    # Exception handling
    "BLE001",  # Blind except
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.per-file-ignores]
"umap/tests/*" = [
    "D100",    # Missing module docstring
    "D101",    # Missing class docstring
    "S101",    # Use of assert (required in tests)
]
"setup.py" = ["D100"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numba.*",
    "sklearn.*",
    "scipy.*",
    "pynndescent.*",
]
ignore_missing_imports = true
